# updater

./: README.md  dev.fizzyizzy05.updater.json  meson.build
data/: dev.fizzyizzy05.updater.desktop.in  dev.fizzyizzy05.updater.gschema.xml  dev.fizzyizzy05.updater.metainfo.xml.in  dev.fizzyizzy05.updater.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in
src/: application.vala  main.vala  meson.build  updater.gresource.xml  window.blp  window.vala
